# jellybins

./: .gitattributes  App.xaml  CMakeLists.txt  COM-VS-EXE.md  COMFILE.md  ELF-BINARY-STRUCT.MD  JBC_README.md  JELLYBINS-CI.MD  JellyBins.sln  JellyBins.sln.DotSettings  LICENSE  README.md  README_JBC.md  README_JBW.md  README_RU.md  SUPPORT_LE.md  SUPPORT_NE.md  SUPPORT_PE.md  framework.h  jbc.md  jellybins.Core.sln  jellybins.csproj  jellybins.sln  main.c  retyping.h
Binary/: BinaryCharacteristics.cs  ClrInformationBlock.cs  ExceptionsController.cs  JbClrInformation.cs  JbLeInformation.cs  JbNeInformation.cs  JbPeInformation.cs  LeInformationBlock.cs  NeInformationBlock.cs  PeInformationBlock.cs
Config/: JbConfig.cs  JbConfigReader.cs
Factory/: ExecutableAnalyser.h  ExecutableReader.c
Format/: Table.c  printing.c
JellyBins.Abstractions/: BaseDump.cs  BaseFileInfo.cs  FileSaverType.cs  FileSegmentationType.cs  FileType.cs  IDrawer.cs  IFileDumper.cs  IFileSaver.cs  IModuleProcessor.cs  IReportMaker.cs  IVirtualAddress.cs  JellyBins.Abstractions.csproj  README.md
JellyBins.Client/: App.xaml  App.xaml.cs  JellyBins.Client.csproj  JellyBins.Client_3dwtc12b_wpftmp.csproj
JellyBins.Core/: README.md  (+3 more)
jellybins.ci/: CMakeLists.txt
jellybins.ci/Factory/: ExecutableAnalyser.c  ExecutableReader.h
jellybins.ci/Format/: Table.h  printing.h
jellybins.ci/LinearExecutable/: LEHeader.h  ModuleFlags.c  ModuleFlags.h
jellybins.ci/LinkableExecutable/: ELFTypes
jellybins.ci/NewExecutable/: ProgramFlags.c
jellybins.ci/PortableExecutable/: Characteristics.h  PEHeader.h
(+484 files in other folders)
